force-app/main/default/objects/Shipment_Order_Line_Item__c/Shipment_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Object to track shipment order items</description>
    <label>Shipment Order Line Item</label>
    <nameField>
        <label>Shipment Order Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>