force-app/main/default/objects/Shipment_Order_Line_Item__c/fields/List_Product_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Product_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List Product Price</label>
    <referenceTo>List_Product_Price__c</referenceTo>
    <relationshipLabel>Shipment Order Line Items</relationshipLabel>
    <relationshipName>Shipment_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>