force-app/main/default/objects/Shipment_Order_Line_Item__c/fields/Opportunity_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Quote Line Item</label>
    <referenceTo>Opportunity_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Shipment Order Line Items</relationshipLabel>
    <relationshipName>Shipment_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>