force-app/main/default/objects/Shipment_Order_Line_Item__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>