force-app/main/default/objects/Shipment_Order_Line_Item__c/fields/Shipment_Order__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Order__c</fullName>
    <label>Shipment Order</label>
    <referenceTo>Shipment_Order__c</referenceTo>
    <relationshipLabel>Shipment Order Line Items</relationshipLabel>
    <relationshipName>Shipment_Order_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>