force-app/main/default/objects/Shipment_Order_Line_Item__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>