force-app/main/default/objects/Shipment_Order_Line_Item__c/fields/Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to assing the stock item that should be deliver an copy on the asset</description>
    <label>Stock Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>There is not stock Items available</errorMessage>
        <filterItems>
            <field>Stock_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>New - In Stock, In Stock</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Stock_Item__c</referenceTo>
    <relationshipLabel>Shipment Order Line Items</relationshipLabel>
    <relationshipName>Shipment_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>